backup-manifests/kubernetes-manifests/linkerd-installation.yaml
# Kubernetes-Manifest zur Vorbereitung der Linkerd-Installation
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd
  labels:
    linkerd.io/is-control-plane: "true"
    config.linkerd.io/admission-webhooks: disabled
    linkerd.io/control-plane-ns: "linkerd"
---
# Anmerkung: 
# Dieses Manifest bereitet die Installation von Linkerd vor.
# Die tatsächliche Installation würde mit dem Linkerd-CLI erfolgen:
# 
# 1. linkerd install | kubectl apply -f -
# 2. linkerd check
# 
# Um Dienste im Mesh zu registrieren:
# kubectl get deploy -n erp-system -o yaml | linkerd inject - | kubectl apply -f -
